@@ -23,9 +23,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.axis2</groupId>
-        <artifactId>axis2-parent</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <artifactId>axis2</artifactId>
+        <version>1.8.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>axis2-saaj</artifactId>
     <name>Apache Axis2 - SAAJ</name>
@@ -37,10 +37,6 @@
         <url>http://svn.apache.org/viewvc/axis/axis2/java/core/trunk/modules/saaj</url>
     </scm>
     <dependencies>
-        <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-saaj_1.3_spec</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.apache.ws.commons.axiom</groupId>
             <artifactId>axiom-dom</artifactId>
@@ -90,6 +86,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.sun.xml.messaging.saaj</groupId>
             <artifactId>saaj-impl</artifactId>
             <version>1.3.2</version>
@@ -100,6 +101,12 @@
                     <artifactId>saaj-api</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>saaj-testsuite</artifactId>
+            <version>${axiom.version}</version>
+            <scope>test</scope>
         </dependency>
         <!-- This is required on IBM JDKs (and potentially others) because saaj-impl depends
              on Sun's internal copy of Xerces. See AXIS2-4228. -->
@@ -140,12 +147,28 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
+                <groupId>com.github.veithen.alta</groupId>
+                <artifactId>alta-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-properties</goal>
+                        </goals>
+                        <configuration>
+                            <name>surefire.bootclasspath</name>
+                            <value>%file%</value>
+                            <separator>${path.separator}</separator>
+                            <artifacts>
+                                <artifact>
+                                    <!-- TODO: make the test cases compatible with the SAAJ API in the JRE and remove this -->
+                                    <groupId>org.apache.geronimo.specs</groupId>
+                                    <artifactId>geronimo-saaj_1.3_spec</artifactId>
+                                    <version>1.0.1</version>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -160,7 +183,7 @@
                         presence of jaxp-ri on the classpath.
                       * Please leave this on a single line. Adding a newline between the two
                         options causes a build failure. -->
-                    <argLine>-Djava.endorsed.dirs=${m2Repository}/org/apache/geronimo/specs/geronimo-saaj_1.3_spec/${geronimo.spec.saaj.version}/ -Dcom.sun.org.apache.xerces.internal.xni.parser.XMLParserConfiguration=com.sun.org.apache.xerces.internal.parsers.XIncludeParserConfiguration</argLine>
+                    <argLine>-Xbootclasspath/p:${surefire.bootclasspath} -Dcom.sun.org.apache.xerces.internal.xni.parser.XMLParserConfiguration=com.sun.org.apache.xerces.internal.parsers.XIncludeParserConfiguration</argLine>
                     <systemProperties>
                         <!-- Prevent Mac OS X from showing an icon in the dock during the test run -->
                         <property>
